# customer-assistant

./: .gitignore  pyproject.toml
src/config/: settings.py
src/db/: abstract.py  embedder.py  retriever.py  vector_db.py
