[project]
name = "customer-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.6",
    "notebook>=7.4.5",
    "openai>=1.101.0",
    "pandas>=2.3.2",
    "pymongo>=4.14.1",
    "qdrant-client>=1.15.1",
]
